implement side bar

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -24,6 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+		box-sizing: border-box;
 }
 
 @layer utilities {
